--- a/contagem/contagem.css
+++ b/contagem/contagem.css
@@ -1,12 +1,39 @@
-*{
-    box-sizing: border-box;
+body{
+    margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.navbar_header{
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    padding: 10px 50px;
+    background-color: rgb(53, 53, 53);
 }
+
+ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 5px;
+}
+
+.navbar_item a{
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    text-transform: none;
+    margin-right: 35px;
+    color: #fff;
+}
+
+.navbar_item a:hover{
+    color: rgb(191, 131, 0);
+}
+
 h1{
     font-weight: normal;
     font-size: 80px;
