--- a/contagem/contagem.css
+++ b/contagem/contagem.css
@@ -2,15 +2,15 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 .navbar_header{
     display: inline-block;
-    width: 100%;
+    width: 193vh;
     height: 50px;
     padding: 10px 50px;
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(72, 72, 72);
 }
-
 ul{
     padding: 0;
     margin: 0;
@@ -19,7 +19,6 @@ ul{
     justify-content: flex-start;
     margin-top: 5px;
 }
-
 .navbar_item a{
     font-size: 30px;
     font-weight: bold;
@@ -29,28 +28,42 @@ ul{
     margin-right: 35px;
     color: #fff;
 }
-
 .navbar_item a:hover{
-    color: rgb(191, 131, 0);
+    padding: 7px;
+    border-radius: 10px;
+    background-color: rgb(191, 131, 0);
 }
-
 h1{
-    font-weight: normal;
-    font-size: 80px;
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+h2{
+    font-size: 45px;
+    margin-bottom: 40px;
 }
 .contagem{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.dias, .horas, .minutos, .segundos{
-    font-weight: bold;
-    font-size: 80px;
-    margin: 40px;
-}
-.num{
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
     text-align: center;
+    font-size: 30px;
 }
-.num span{
-    font-size: 20px;
+.div-contagem{
+    width: 170px;
+    height: 140px;
+    padding: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(72, 72, 72);
+    display: inline-block;
+}
+span{
+    padding: 20px;
+    border-radius: 10px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 40px;
+    background-color: rgb(102, 102, 102);
+    display: inline-block;
 }
