--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body{
     width: 193vh;
     height: 50px;
     padding: 10px 50px;
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(72, 72, 72);
 }
-
 ul{
     padding: 0;
     margin: 0;
@@ -19,7 +18,6 @@ ul{
     justify-content: flex-start;
     margin-top: 5px;
 }
-
 .navbar_item a{
     font-size: 30px;
     font-weight: bold;
@@ -29,11 +27,11 @@ ul{
     margin-right: 35px;
     color: #fff;
 }
-
 .navbar_item a:hover{
-    color: rgb(191, 131, 0);
+    padding: 7px;
+    border-radius: 10px;
+    background-color: rgb(191, 131, 0);
 }
-
 .cronometro{
     text-align: center;
     margin: 20px;
@@ -43,7 +41,7 @@ ul{
 .botao-contagem{
     background-color: rgb(188, 107, 0);
 }
-#watch{
+#relogio{
     font-size: 120px;
     color: black;
 }
@@ -56,7 +54,8 @@ button{
     border: none;
     color: white;
     border-radius: 20px;
-    font-size: 25px;
+    font-size: 35px;
+    font-weight: bold;
 }
 button:hover{
     cursor: pointer;
