--- a/contador.css
+++ b/contador.css
@@ -44,7 +44,7 @@ h1{
     font-weight: bold;
     font-size: 40px;
     margin-bottom: 50px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 h2{
     font-size: 45px;
@@ -60,6 +60,10 @@ form input{
     font-size: 25px;
     border: 4px black solid;
     border-radius: 10px;
+}
+form p{
+    font-weight: bold;
+    font-size: 25px;
 }
 .contagem{
     font-family: sans-serif;
