--- a/contador.css
+++ b/contador.css
@@ -42,7 +42,7 @@ body{
 }
 h1{
     font-weight: bold;
-    font-size: 40px;
+    font-size: 42px;
     margin-bottom: 50px;
     margin-top: 30px;
 }
@@ -54,6 +54,9 @@ form{
     margin-right: 10px;
     font-size: 23px;
     font-weight: bold;
+}
+label{
+    font-size: 25px;
 }
 form input{
     margin-left: 10px;
