--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ body{
     background-color: rgb(37, 37, 39);
 }
 header{
-    margin-top: 50px;
+    margin-top: 40px;
     color: white;
 }
+h1{
+    font-size: 50px;
+    font-weight: bold;
+}
 div img{
-    height: 6.7cm;
+    height: auto;
 }
